[tool.poetry]
name = "unsw"
version = "0.1.0"
description = ""
authors = ["wilfr <wilfredvancasteren@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.6,<3.12"
pandas = "^2.1.3"
matplotlib = "^3.8.1"
mpu = "^0.23.1"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"
seaborn = "^0.13.0"
wakepy = "^0.7.2"
umap-learn = "^0.5.4"
bokeh = "^3.3.1"
datashader = "^0.16.0"
holoviews = "^1.18.1"
scikit-image = "^0.22.0"
colorcet = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
